--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
     "symfony/console": "5.1.*",
     "symfony/dotenv": "5.1.*",
     "symfony/flex": "^1.3.1",
+    "symfony/form": "5.1.*",
     "symfony/framework-bundle": "5.1.*",
     "symfony/security-bundle": "5.1.*",
     "symfony/twig-bundle": "5.1.*",
+    "symfony/validator": "5.1.*",
     "symfony/webpack-encore-bundle": "^1.7",
     "symfony/yaml": "5.1.*",
     "trikoder/oauth2-bundle": "^3.1",
