--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "build": "encore production --progress"
   },
   "dependencies": {
+    "normalize": "^0.3.1",
+    "normalize-scss": "^7.0.1",
+    "spectre.css": "^0.5.9",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.3.4",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.5.1",
+    "wire.css": "^1.2.5"
   }
 }
