--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
     "twig/twig": "^2.12|^3.0"
   },
   "require-dev": {
-    "symfony/maker-bundle": "^1.20"
+    "doctrine/doctrine-fixtures-bundle": "^3.3",
+    "symfony/maker-bundle": "^1.20",
+    "symfony/stopwatch": "^5.1",
+    "symfony/twig-bundle": "^5.1",
+    "symfony/web-profiler-bundle": "^5.1"
   },
   "config": {
     "optimize-autoloader": true,
