--- a/config/packages/trikoder_oauth2.yaml
+++ b/config/packages/trikoder_oauth2.yaml
@@ -42,7 +42,8 @@ trikoder_oauth2:
 
   # Scopes that you wish to utilize in your application.
   # This should be a simple array of strings.
-  scopes:               []
+  scopes:
+    - read
 
   # Configures different persistence methods that can be used by the bundle for saving client and token data.
   # Only one persistence method can be configured at a time.
