--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,5 +27,9 @@ services:
     resource: '../src/Controller/'
     tags: ['controller.service_arguments']
 
+  App\EventListener\AuthCodeListener:
+    tags:
+      - { name: kernel.event_listener, event: 'trikoder.oauth2.authorization_request_resolve', method: onAuthorizationRequestResolve }
+
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
