--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
     "symfony/yaml": "5.1.*",
     "trikoder/oauth2-bundle": "^3.1",
     "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0"
+    "twig/twig": "^2.12|^3.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.3",
     "symfony/maker-bundle": "^1.20",
     "symfony/stopwatch": "^5.1",
-    "symfony/twig-bundle": "^5.1",
     "symfony/web-profiler-bundle": "^5.1"
   },
   "config": {
