--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,7 +8,7 @@ security:
 
   encoders:
     App\Entity\User:
-      algorithm: auto
+      algorithm: bcrypt
 
   firewalls:
     dev:
@@ -19,15 +19,28 @@ security:
       anonymous: false
       stateless: true
       oauth2: true
+    backend:
+      pattern: ^/(backend|oauth)/
+      anonymous: true
+      lazy: true
+      guard:
+        authenticators:
+          - App\Security\LoginFormAuthenticator
+      logout:
+        path: backend_logout
     main:
       anonymous: true
       lazy: true
+
+  role_hierarchy:
+    ROLE_ADMIN: [ROLE_OAUTH_ADMIN, ROLE_USER]
+    ROLE_USER: ROLE_OAUTH_USER
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#firewalls-authentication
 
       # https://symfony.com/doc/current/security/impersonating_user.html
-      # switch_user: true
+    # switch_user: true
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
